[package]
name = "bt_packet_capture_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.9", features = ["capture-stream"] }
etherparse = "0.10"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
inquire = "0.2.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = { version = "0.3" }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bende = "0.5.4"
aho-corasick = "0.7"
memchr = "2"
base64 = "0.13.0"
serde_json = "1.0"